<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.worldnewsinfo.presentation.appBar.AppBarView
        android:id="@+id/filter_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/filter_popular_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <View
        android:id="@+id/filter_popular_button"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/filter_tag_start_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_app_bar" />

    <TextView
        android:id="@+id/filter_popular_text"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/popular"
        app:layout_constraintBottom_toBottomOf="@id/filter_popular_button"
        app:layout_constraintEnd_toEndOf="@id/filter_popular_button"
        app:layout_constraintStart_toEndOf="@id/filter_popular_img"
        app:layout_constraintTop_toTopOf="@id/filter_popular_button" />

    <ImageView
        android:id="@+id/filter_popular_img"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/filter_positive_text_icon"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/filter_popular_button"
        app:layout_constraintEnd_toStartOf="@id/filter_popular_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/filter_popular_button"
        app:layout_constraintTop_toTopOf="@id/filter_popular_button" />

    <View
        android:id="@+id/filter_new_button"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:background="@drawable/filter_tag_center_shape"
        app:layout_constraintStart_toEndOf="@id/filter_popular_button"
        app:layout_constraintTop_toTopOf="@id/filter_popular_button" />

    <TextView
        android:id="@+id/filter_new_text"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/new_string"
        app:layout_constraintBottom_toBottomOf="@id/filter_new_button"
        app:layout_constraintEnd_toEndOf="@id/filter_new_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/filter_new_img"
        app:layout_constraintTop_toTopOf="@id/filter_new_button" />

    <ImageView
        android:id="@+id/filter_new_img"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/filter_positive_text_icon"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/filter_new_button"
        app:layout_constraintEnd_toStartOf="@id/filter_new_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/filter_new_button"
        app:layout_constraintTop_toTopOf="@id/filter_new_button" />

    <View
        android:id="@+id/filter_relevant_button"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:background="@drawable/filter_tag_end_shape"
        app:layout_constraintStart_toEndOf="@id/filter_new_button"
        app:layout_constraintTop_toTopOf="@id/filter_new_button" />


    <TextView
        android:id="@+id/filter_relevant_text"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/relevant"
        app:layout_constraintBottom_toBottomOf="@id/filter_relevant_button"
        app:layout_constraintEnd_toEndOf="@id/filter_relevant_button"
        app:layout_constraintStart_toEndOf="@id/filter_relevant_img"
        app:layout_constraintTop_toTopOf="@id/filter_relevant_button" />

    <ImageView
        android:id="@+id/filter_relevant_img"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/filter_positive_text_icon"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/filter_relevant_button"
        app:layout_constraintEnd_toStartOf="@id/filter_relevant_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/filter_relevant_button"
        app:layout_constraintTop_toTopOf="@id/filter_relevant_button" />

    <TextView
        android:id="@+id/filter_date_string"
        android:layout_width="140dp"
        android:layout_height="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="@id/filter_popular_button"
        app:layout_constraintTop_toTopOf="@id/filter_calendar_img" />

    <TextView
        android:id="@+id/filter_choose_date_string"
        android:layout_width="140dp"
        android:layout_height="16dp"
        android:text="@string/choose_date"
        android:textAlignment="viewEnd"
        android:textColor="?attr/colorOutline"
        app:layout_constraintStart_toEndOf="@id/filter_date_string"
        app:layout_constraintTop_toTopOf="@id/filter_date_string" />

    <View
        android:id="@+id/filter_calendar_img_container"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/filtration_shape_color_primary"
        app:layout_constraintStart_toEndOf="@id/filter_choose_date_string"
        app:layout_constraintTop_toBottomOf="@id/filter_popular_button"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/filter_calendar_img"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/calendar_icon"
        app:layout_constraintStart_toStartOf="@id/filter_calendar_img_container"
        app:layout_constraintTop_toTopOf="@id/filter_calendar_img_container"
        app:layout_constraintBottom_toBottomOf="@id/filter_calendar_img_container"
        app:layout_constraintEnd_toEndOf="@id/filter_calendar_img_container"/>

    <TextView
        android:id="@+id/filter_language_string"
        android:layout_width="140dp"
        android:layout_height="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/language"
        app:layout_constraintStart_toStartOf="@id/filter_date_string"
        app:layout_constraintTop_toBottomOf="@id/filter_date_string" />

    <TextView
        android:id="@+id/filter_language_1"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        android:text="@string/language_1"
        app:layout_constraintStart_toStartOf="@id/filter_language_string"
        app:layout_constraintTop_toBottomOf="@id/filter_language_string"
        android:background="@drawable/filter_language_shape"/>

    <TextView
        android:id="@+id/filter_language_2"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="4dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        android:text="@string/language_2"
        app:layout_constraintStart_toEndOf="@id/filter_language_1"
        app:layout_constraintTop_toTopOf="@id/filter_language_1"
        android:background="@drawable/filter_language_shape"/>

    <TextView
        android:id="@+id/filter_language_3"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="4dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="6dp"
        android:text="@string/language_3"
        app:layout_constraintStart_toEndOf="@id/filter_language_2"
        app:layout_constraintTop_toTopOf="@id/filter_language_2"
        android:background="@drawable/filter_language_shape"/>


</androidx.constraintlayout.widget.ConstraintLayout>