<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Base.Theme.Bar"
    android:layout_width="match_parent"
    android:layout_height="108dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <com.example.worldnewsinfo.presentation.navigationBar.CustomNavigationButtonView
        android:id="@+id/custom_headlines"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@id/custom_saved"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:nav_image="@drawable/headlines_icon"
        app:nav_text="@string/headlines" />

    <com.example.worldnewsinfo.presentation.navigationBar.CustomNavigationButtonView
        android:id="@+id/custom_saved"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@id/custom_sources"
        app:layout_constraintStart_toEndOf="@id/custom_headlines"
        app:layout_constraintTop_toTopOf="parent"
        app:nav_image="@drawable/saved_off_icon"
        app:nav_text="@string/saved" />

    <com.example.worldnewsinfo.presentation.navigationBar.CustomNavigationButtonView
        android:id="@+id/custom_sources"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/custom_saved"
        app:layout_constraintTop_toTopOf="parent"
        app:nav_image="@drawable/sources_icon"
        app:nav_text="@string/sources" />

</androidx.constraintlayout.widget.ConstraintLayout>